# invoice-renamer

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  index.html  invoices_renaming.ipynb  package-lock.json  package.json  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
invoiceRenamer/: index.html  package-lock.json  package.json
invoiceRenamer/src/: i18n.ts  main.ts  styles.css
invoiceRenamer/src-tauri/: Cargo.toml
invoiceRenamer/src-tauri/src/: i18n.rs  lib.rs  main.rs  mistral.rs  pdf_utils.rs  processor.rs
python draft/: invoices_renaming.ipynb
python version/: .env.example  requirements.txt
scripts/: bump-version.sh
src/: i18n.ts  main.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: i18n.rs  lib.rs  mistral.rs  path_utils.rs  pdf_utils.rs  processor.rs
