[package]
name = "invoicerenamer"
version = "0.1.1"
description = "Desktop app to rename invoice PDFs with Mistral OCR and LLM"
authors = ["Dogmaël DARTIGUE-PEYROU"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "invoicerenamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
pdf-extract = "0.9"
sys-locale = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
